# variant-combinations

./: README.md  output-dicts  pyproject.toml  variants.conf.example
.devcontainer/: devcontainer.json
metadata_pepxxx/: __init__.py  variants_to_json.py
metadata_pepxxx/commands/: convert.py  main.py
tests/: test_variants_to_json.py
tests/artifacts/: variants1.conf  variants1.json  variants2.conf  variants2.json  variants3.conf  variants3.json  variants4.conf  variants4.json
tests/commands/: test_convert.py
